kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freelance-portal-namespace
  labels:
    name: freelance-portal
